# argmax

./: README.md  openapi.yaml  pyproject.toml
argmax/: app.py
argmax/api/: users.py
argmax/exception/: __init__.py  image_processing_exception.py  image_retrieval_exception.py  stack_overflow_exception.py
argmax/model/: __init__.py  bounding_box.py  detection_result.py  stack_overflow_response.py  users_request.py  users_response.py
argmax/so/: __init__.py  stack_overflow.py
argmax/util/: detection.py
